--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,27 +1,42 @@
-/* line 9, ../sass/main.scss */
+@font-face {
+  font-family: "OpenSansCn";
+  src: url(../fonts/OpenSans-CondLight.ttf);
+}
+
+@font-face {
+  font-family: "OpenSans";
+  src: url(../fonts/opensans-light-webfont.woff);
+}
+
+@font-face {
+  font-family: "Serveroff";
+  src: url(../fonts/Web_Serveroff.otf);
+}
+
+/* line 22, ../sass/main.scss */
 body {
   padding: 0;
   margin: 0;
+  color: #464646;
 }
 
-/* line 14, ../sass/main.scss */
+/* line 28, ../sass/main.scss */
 .stripe {
-  min-height: 410px;
   position: relative;
   padding: 3em .769em;
 }
 
-/* line 20, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 .one {
   background-color: #ccc;
 }
 
-/* line 24, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 .two {
-  min-height: 200px;
+  min-height: 450px;
 }
 
-/* line 28, ../sass/main.scss */
+/* line 41, ../sass/main.scss */
 .three {
   text-align: center;
   background-color: white;
@@ -29,45 +44,46 @@ body {
   padding-bottom: 1.5em;
 }
 
-/* line 35, ../sass/main.scss */
+/* line 48, ../sass/main.scss */
 .four {
   background-color: white;
 }
 
-/* line 39, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 .headtext {
   text-align: right;
   margin-right: 32.24px;
 }
 
-/* line 44, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 49, ../sass/main.scss */
+/* line 62, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
-  font-family: calibri;
+  font-family: "OpenSans";
   font-weight: 200;
 }
 
-/* line 55, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 .headh2 {
   font-size: 1.4em;
   font-family: calibri;
+  font-family: "OpenSans";
   font-weight: 200;
 }
 
-/* line 61, ../sass/main.scss */
+/* line 75, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
   orphans: 3;
 }
 
-/* line 71, ../sass/main.scss */
+/* line 85, ../sass/main.scss */
 .circleImg {
   display: none;
   position: absolute;
@@ -78,34 +94,36 @@ body {
   background-color: #000;
 }
 
-/* line 81, ../sass/main.scss */
+/* line 95, ../sass/main.scss */
 .list li {
   display: list-item;
   padding: 0;
+  font-family: "OpenSans";
   padding-bottom: 32.24px;
   margin-left: -2.4em;
   list-style: none;
 }
 
-/* line 90, ../sass/main.scss */
+/* line 105, ../sass/main.scss */
 .list li:before {
   content: "\003E \020";
   font-family: "consolas";
   font-weight: 200;
+  font-size: .8em;
+  padding-top: .2em;
   margin-left: -.17em;
   width: 0.8em;
   float: left;
-  margin-bottom: .1em;
+  margin-bottom: .5em;
 }
 
-/* line 100, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .list {
-  border-top: black solid 1px;
+  border-top: #a8a8a8 solid 1px;
   display: inline-block;
   text-align: left;
-  font-family: calibri;
   margin-top: 0;
-  padding-top: 12.32px;
+  padding-top: 15px;
   list-style-type: circle;
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
@@ -115,20 +133,20 @@ body {
   overflow: visible;
 }
 
-/* line 116, ../sass/main.scss */
+/* line 132, ../sass/main.scss */
 .listHidden {
   display: none;
   margin-right: 0;
 }
 
-/* line 121, ../sass/main.scss */
+/* line 137, ../sass/main.scss */
 .tileContainer {
   display: block;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 127, ../sass/main.scss */
+/* line 143, ../sass/main.scss */
 .floatTitle {
   display: block;
   width: 13.8em;
@@ -139,20 +157,21 @@ body {
   margin-right: .769em;
 }
 
-/* line 140, ../sass/main.scss */
+/* line 156, ../sass/main.scss */
 .threeh2 {
-  font-family: "calibri";
+  font-family: "OpenSans";
   font-weight: 200;
+  font-size: 1.4em;
   text-align: left;
   display: block;
-  color: black;
+  color: #646464;
   margin-top: -1px;
-  padding-top: 8px;
+  padding-top: 7px;
   padding-bottom: .769em;
   margin-bottom: 0em;
 }
 
-/* line 153, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -160,12 +179,12 @@ body {
   height: 8.538em;
   margin-top: .769em;
   margin-right: 2.01em;
-  border-top: 1px solid black;
+  border-top: 1px solid #a8a8a8;
   padding-top: .769em;
   overflow: auto;
 }
 
-/* line 165, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .listContainer {
   padding: 0;
   max-width: 759.48px;
@@ -176,41 +195,41 @@ body {
   min-height: 265px;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 192, ../sass/main.scss */
 .tileInvis1 {
   display: none;
 }
 
-/* line 179, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .tileInvis {
   display: none;
 }
 
-/* line 184, ../sass/main.scss */
+/* line 201, ../sass/main.scss */
 h3 {
   display: block;
   min-height: 2.5em;
   font-size: 1.05em;
   margin: 0;
   font-weight: 400;
-  font-family: calibri;
+  font-family: "OpenSans";
   text-align: left;
 }
 
-/* line 195, ../sass/main.scss */
+/* line 213, ../sass/main.scss */
 p {
   text-align: left;
-  font-family: Candara;
+  font-family: "OpenSans";
   font-size: 12px;
   line-height: 1.3em;
 }
 
-/* line 202, ../sass/main.scss */
+/* line 220, ../sass/main.scss */
 .tileText {
   text-align: left;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 224, ../sass/main.scss */
 .floatInfo {
   display: none;
   float: right;
@@ -221,18 +240,18 @@ p {
   margin-top: 33px;
 }
 
-/* line 216, ../sass/main.scss */
+/* line 234, ../sass/main.scss */
 .infoText {
   text-align: center;
 }
 
-/* line 220, ../sass/main.scss */
+/* line 238, ../sass/main.scss */
 .contactTitle {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #a8a8a8;
   padding-bottom: 31px;
 }
 
-/* line 225, ../sass/main.scss */
+/* line 243, ../sass/main.scss */
 .contactQuarter {
   display: inline-block;
   margin: 0;
@@ -240,7 +259,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 232, ../sass/main.scss */
+/* line 250, ../sass/main.scss */
 .contactHalf {
   display: inline-block;
   margin: 0;
@@ -248,7 +267,13 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 241, ../sass/main.scss */
+/* line 257, ../sass/main.scss */
+input {
+  font-family: "OpenSans";
+  border: #a8a8a8 1px solid;
+}
+
+/* line 262, ../sass/main.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -257,169 +282,216 @@ h4 {
   margin-top: 0px;
   margin-bottom: 0px;
   font-weight: 400;
-  font-family: calibri;
+  font-family: "OpenSans";
   text-align: left;
 }
 
-/* line 253, ../sass/main.scss */
+/* line 274, ../sass/main.scss */
 textarea {
   margin: 0;
+  font-family: "OpenSans";
+  border: #a8a8a8 1px solid;
 }
 
-/* line 257, ../sass/main.scss */
+/* line 280, ../sass/main.scss */
+input:focus {
+  border: 1px solid #66b9e3;
+}
+
+/* line 284, ../sass/main.scss */
+textarea:focus {
+  border: 1px solid #66b9e3;
+}
+
+/* line 288, ../sass/main.scss */
 .contactAreaQuarter {
   box-sizing: border-box;
   width: 219px;
   height: 32.24px;
 }
 
-/* line 264, ../sass/main.scss */
+/* line 295, ../sass/main.scss */
 #message {
   width: 221px;
   min-height: 3.5em;
 }
 
-/* line 270, ../sass/main.scss */
+/* line 301, ../sass/main.scss */
 .displayToggle {
   display: none;
+}
+
+/* line 305, ../sass/main.scss */
+.button {
+  float: left;
+  color: #464646;
+  height: 32.24px;
+  width: 110px;
+  border: 1px solid #a8a8a8;
+  font-family: "OpenSans";
+  margin-left: calc(50% - 127px);
+  line-height: 2em;
+  margin-bottom: 2em;
+  text-decoration: none;
+}
+
+/* line 318, ../sass/main.scss */
+.button:hover {
+  border: 1px solid #66b9e3;
+  color: #66b9e3;
 }
 
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 548px) {
-  /* line 281, ../sass/main.scss */
+  /* line 330, ../sass/main.scss */
+  .two {
+    min-height: 0px;
+  }
+
+  /* line 334, ../sass/main.scss */
   .list .liToggle {
     display: none;
   }
 
-  /* line 289, ../sass/main.scss */
+  /* line 342, ../sass/main.scss */
   .listHidden {
     display: inline-block;
   }
 
-  /* line 293, ../sass/main.scss */
+  /* line 346, ../sass/main.scss */
   .listContainer {
     min-width: 474px;
   }
 
-  /* line 297, ../sass/main.scss */
+  /* line 350, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 301, ../sass/main.scss */
+  /* line 354, ../sass/main.scss */
+  .button {
+    margin-left: calc(50% - 15.85em);
+  }
+
+  /* line 358, ../sass/main.scss */
   .tileInvis1 {
     display: inline-block;
   }
 
-  /* line 305, ../sass/main.scss */
+  /* line 362, ../sass/main.scss */
   #message {
     width: 474.24;
     min-height: 5.5em;
   }
 }
 @media (min-width: 801px) {
-  /* line 312, ../sass/main.scss */
+  /* line 372, ../sass/main.scss */
   .threeh2list {
     text-align: left;
-    border-top: 1px solid black;
+    border-top: 1px solid #a8a8a8;
   }
 
-  /* line 317, ../sass/main.scss */
+  /* line 377, ../sass/main.scss */
   .listTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 100px;
   }
 
-  /* line 325, ../sass/main.scss */
+  /* line 385, ../sass/main.scss */
   .listContainer {
     min-width: 727.32px;
     min-height: 265px;
     padding: 0;
   }
 
-  /* line 331, ../sass/main.scss */
+  /* line 391, ../sass/main.scss */
   ul .displayToggle {
     display: list-item;
   }
 
-  /* line 344, ../sass/main.scss */
+  /* line 404, ../sass/main.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 349, ../sass/main.scss */
+  /* line 409, ../sass/main.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 353, ../sass/main.scss */
+  /* line 413, ../sass/main.scss */
   .floatTitle {
-    margin-left: calc(50% - 23.7em);
+    margin-left: calc(50% - 23.85em);
   }
 
-  /* line 357, ../sass/main.scss */
+  /* line 417, ../sass/main.scss */
+  .button {
+    margin-left: calc(50% - 23.85em);
+  }
+
+  /* line 421, ../sass/main.scss */
   .floatInfo {
     display: inline-block;
   }
 
-  /* line 361, ../sass/main.scss */
+  /* line 425, ../sass/main.scss */
   .info {
     display: none;
   }
 
-  /* line 365, ../sass/main.scss */
+  /* line 429, ../sass/main.scss */
   .tileContainer {
     max-width: 763px;
   }
 
-  /* line 369, ../sass/main.scss */
+  /* line 433, ../sass/main.scss */
   .listTileContainer {
     max-width: 250px;
   }
 }
 @media (min-width: 1054px) {
-  /* line 375, ../sass/main.scss */
-  .floatInfo {
-    margin-top: 48px;
-  }
-
-  /* line 379, ../sass/main.scss */
+  /* line 442, ../sass/main.scss */
   .topRow {
     padding-top: 15px;
   }
 
-  /* line 386, ../sass/main.scss */
+  /* line 449, ../sass/main.scss */
   .contactTitle {
     border-bottom: none;
   }
 
-  /* line 390, ../sass/main.scss */
+  /* line 453, ../sass/main.scss */
   .listContainer {
     min-height: 265px;
   }
 
-  /* line 394, ../sass/main.scss */
+  /* line 457, ../sass/main.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 22em;
   }
 
-  /* line 400, ../sass/main.scss */
+  /* line 463, ../sass/main.scss */
+  .button {
+    margin-left: calc(50% - 31.1em);
+  }
+
+  /* line 467, ../sass/main.scss */
   .listTitle {
     margin-bottom: 100px;
   }
 
-  /* line 404, ../sass/main.scss */
+  /* line 471, ../sass/main.scss */
   .threeh2 {
     text-align: right;
-    border-top: 1px solid black;
+    border-top: 1px solid #a8a8a8;
   }
 
-  /* line 409, ../sass/main.scss */
+  /* line 476, ../sass/main.scss */
   .tileContainer {
     max-width: 1024px;
   }
